Chapters list demo added

--- a/meta/meta/Views/CharacterPage.xaml
+++ b/meta/meta/Views/CharacterPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="meta.Views.CharacterPage" Title="Информация о персонаже">
+             x:Class="meta.Views.CharacterPage" Title="Информация о персонаже"
+             NavigationPage.HasNavigationBar = "false">
     <StackLayout>
         <StackLayout x:Name="characterStack">
             <Label x:Name="q" Text="Имя" />
