--- a/meta/meta/Views/ChapterPage.xaml
+++ b/meta/meta/Views/ChapterPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="meta.Views.Page1">
+             x:Class="meta.Views.ChapterPage"
+             NavigationPage.HasNavigationBar = "false">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Главы"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Entry Text="{Binding Title}" FontSize="Large" />
+            <Editor Text="{Binding Text}" FontSize="Medium"  HeightRequest="750" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
