--- a/meta/meta/Views/CharacterPage.xaml
+++ b/meta/meta/Views/CharacterPage.xaml
@@ -13,7 +13,7 @@
                 <StackLayout>
                     <Label Text="Иконка" FontSize="Medium" TextColor="Black"/>
                     <Button ImageSource="{Binding CharImagePath}" HorizontalOptions="Start"  WidthRequest="82" HeightRequest="82" BorderWidth="1" Command="{Binding SwitchImageCommand}" CommandParameter="{Binding}"/>
-                    
+
                 </StackLayout>
                 <microcharts:ChartView x:Name="chartView" WidthRequest="325" HeightRequest="150" BackgroundColor="Gray"/>
             </StackLayout>
@@ -25,7 +25,7 @@
                     <Button x:Name="addParam"  Text="✔" IsVisible="false" Command="{Binding CreateParamCommand}" CommandParameter="{Binding Source={x:Reference Name=paramName}, Path=Text}" HeightRequest="45" WidthRequest="55" Clicked="plusParamHide" BackgroundColor="#1b97f3" TextColor="#FFFFFF"/>
                 </StackLayout>
             </StackLayout>
-            <ListView x:Name="paramsList" ItemsSource="{Binding Params}"
+            <ListView x:Name="paramsList" ItemsSource="{Binding Params}" 
                HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -48,9 +48,41 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Label Text="Описание" FontSize="Medium" TextColor="Black"/>
-            <Editor Text="{Binding Description}" FontSize="Medium" BackgroundColor="#ACDCFF" HeightRequest="250" PlaceholderColor="White" TextColor="Black" />
+
+                <StackLayout x:Name="OpisStack">
+                <Label Text="Описание" FontSize="Medium" TextColor="Black"/>
+                <Editor Text="{Binding Description}" FontSize="Medium" BackgroundColor="#ACDCFF" HeightRequest="250" PlaceholderColor="White" TextColor="Black" />
+                <Button x:Name="svazButton" Text="Связанные персонажи" Clicked="onToSvazClick" BackgroundColor="#ACDCFF" TextColor="#FFFFFF"/>
+            </StackLayout>
+
+            <StackLayout x:Name="SvazStack" MinimumHeightRequest="305">
+                <Label Text="Связанные персонажи" FontSize="Medium" TextColor="Black"/>
+
+                <StackLayout>
+                    <Label x:Name ="noListData" Text="Связанных персонажей нет" FontSize="Medium" TextColor="Black" IsVisible="false" Padding="0,10,0,0"/>
+                    <ListView x:Name="references" ItemsSource="{Binding Charrs}"
+               HasUnevenRows="True" SelectedItem="{Binding ListViewModel.SelectedCharacter, Mode=TwoWay}" >
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <ViewCell.View>
+                                        <StackLayout Orientation="Horizontal" BackgroundColor="#ACDCFF">
+                                            <Image Source="{Binding CharImagePath}"/>
+                                            <Label Text="{Binding Name}" FontSize="Medium" TextColor="Black"/>
+                                        </StackLayout>
+                                    </ViewCell.View>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackLayout>
+
+                <Button Text="К описанию" Clicked="onToOpisClick" BackgroundColor="#ACDCFF" TextColor="#FFFFFF"/>
+            </StackLayout>
+
         </StackLayout>
+
+
         <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
             <Button x:Name="addButton" Text="Добавить" Command="{Binding ListViewModel.SaveCharacterCommand}" CommandParameter="{Binding}" IsVisible="true" BackgroundColor="#1b97f3" TextColor="#FFFFFF"/>
             <Button x:Name="delButton" Text="Удалить" Command="{Binding ListViewModel.DeleteCharacterCommand}" CommandParameter="{Binding}" BackgroundColor="#1b97f3" TextColor="#FFFFFF"/>
@@ -59,3 +91,4 @@
         </StackLayout>
     </StackLayout>
 </ContentPage>
+
